--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,3 +1,20 @@
 .wrapper {
-    background-color: rebeccapurple;
+    height: 60px;
+    box-shadow: 0px 1px 1px rgb(0 0 0/12%);
+    display: flex;
+    background-color: rgba(18, 18, 18, 1);
+}
+
+.inner {
+    height: 100%;
+    width: 1150px;
+    display: flex;
+}
+
+.search {
+    padding-left: 50px;
+}
+
+input {
+    margin-left: 50px;
 }
