--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -3,18 +3,88 @@
     box-shadow: 0px 1px 1px rgb(0 0 0/12%);
     display: flex;
     background-color: rgba(18, 18, 18, 1);
+    border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
+    --search-height: 46px;
+    --search-top-spacer: 9px;
 }
 
 .inner {
     height: 100%;
     width: 1150px;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 15px;
+}
+
+.logo {
+    align-items: center;
+    display: flex;
 }
 
 .search {
-    padding-left: 50px;
+    width: 515px;
+    border-radius: 92px;
+    background: rgba(255, 255, 255, 0.12);
+    height: var(--search-height);
+    padding-left: 16px;
+    display: flex;
+    position: relative;
+    input {
+        flex: 1;
+        height: 100%;
+        color: rgba(255, 255, 255, 0.9);
+        background: transparent;
+        font-size: 1.6rem;
+        caret-color: var(--primary-color);
+    }
+    ::placeholder {
+        color: rgba(255, 255, 255, 0.9);
+    }
+    &:hover {
+        border: solid 1px rgba(255, 255, 255, 0.3);
+    }
+
+    &::after {
+        content: '';
+        position: absolute;
+        top: var(--search-top-spacer);
+        right: 56px;
+        width: 1px;
+        height: calc(var(--search-height) - 18px);
+        background-color: rgba(255, 255, 255, 0.3);
+    }
+    &:focus-within {
+        border: solid 1px rgba(255, 255, 255, 0.3);
+    }
+    input:not(:placeholder-shown) ~ .search-btn {
+        color: rgba(255, 255, 255, 0.9);
+    }
 }
 
-input {
-    margin-left: 50px;
+.search-delete,
+.loading {
+    background-color: transparent;
+    color: rgba(118, 118, 118, 1);
+    font-size: 1.5rem;
+    position: absolute;
+    transform: translateY(-50%);
+    top: 50%;
+    right: 70px;
+}
+
+.search-btn {
+    color: rgba(118, 118, 118, 1);
+    background-color: transparent;
+    font-size: 2rem;
+    width: 56px;
+    height: 100%;
+    border-top-right-radius: 92px;
+    border-bottom-right-radius: 92px;
+    &:hover {
+        cursor: pointer;
+        color: rgba(255, 255, 255, 0.9);
+        background-color: rgba(255, 255, 255, 0.1);
+    }
 }
