--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,17 +1,18 @@
 .wrapper {
     height: 60px;
-    box-shadow: 0px 1px 1px rgb(0 0 0/12%);
+    box-shadow: 0px 1px 1px rgb(42, 42, 42, 1);
     display: flex;
     background-color: rgba(18, 18, 18, 1);
     border-top-right-radius: 8px;
     border-top-left-radius: 8px;
     --search-height: 46px;
     --search-top-spacer: 9px;
+    margin-bottom: 3px;
 }
 
 .inner {
     height: 100%;
-    width: 1150px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -21,10 +22,14 @@
 .logo {
     align-items: center;
     display: flex;
+    cursor: pointer;
+    margin-top: auto;
 }
-
+.search-result,
 .search {
     width: 515px;
+}
+.search {
     border-radius: 92px;
     background: rgba(255, 255, 255, 0.12);
     height: var(--search-height);
@@ -63,6 +68,12 @@
     }
 }
 
+.search-title {
+    padding-left: 10px;
+    font-weight: 600;
+    font-size: 1.4rem;
+}
+
 .search-delete,
 .loading {
     background-color: transparent;
@@ -87,4 +98,8 @@
         color: rgba(255, 255, 255, 0.9);
         background-color: rgba(255, 255, 255, 0.1);
     }
+}
+
+.action {
+    width: 100px;
 }
