--- a/src/components/Layout/DefaultLayout/Sidebar/Sidebar.module.scss
+++ b/src/components/Layout/DefaultLayout/Sidebar/Sidebar.module.scss
@@ -1,11 +1,12 @@
 .wrapper {
     top: 60px;
     bottom: 0;
-    width: 20%;
+    width: 250px;
     background: rgba(18, 18, 18, 1);
     position: fixed;
     margin-top: 2px;
     padding: 20px 8px 20px 8px;
+    z-index: 99;
 }
 
 .inner {
@@ -13,19 +14,19 @@
         margin-bottom: 8px;
     }
 
-    a {
-        display: flex;
-        position: relative;
-        align-items: center;
-        padding: 8px;
-        font-size: 1.8rem;
-        font-weight: 700;
-    }
-
-    span {
+    .inner-span {
         margin-left: 8px;
         margin-top: 5px;
     }
+}
+
+.inner-tag-a {
+    display: flex;
+    position: relative;
+    align-items: center;
+    padding: 8px;
+    font-size: 1.8rem;
+    font-weight: 700;
 }
 
 .loggin {
@@ -34,5 +35,110 @@
 
     p {
         margin-bottom: 20px;
+        color: rgba(255, 255, 255, 0.5);
     }
+}
+
+.contain {
+    position: relative;
+    padding-top: 16px;
+    padding-left: 8px;
+    &::before {
+        content: '';
+        position: absolute;
+        left: 8px;
+        right: 18px;
+        top: 0;
+        height: 1px;
+        background: rgba(255, 255, 255, 0.12);
+        transform: scaleY(0.5);
+    }
+}
+
+.create-effect {
+    padding-right: 16px;
+    height: 50px;
+    text-align: center;
+    position: relative;
+    margin-bottom: 30px;
+    &:hover .create-effect-inner {
+        transform: scale(1.06);
+        transition: transform 200ms cubic-bezier(0.25, 0, 0.25, 1);
+        cursor: pointer;
+    }
+}
+
+.create-effect-tag-a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    img {
+        height: 52px;
+        border-radius: 8px;
+        max-width: 100%;
+        display: block;
+    }
+}
+
+.create-effect-inner {
+    position: absolute;
+    max-width: 200px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+
+.create-effect-icon {
+    margin-right: 9px;
+    width: 19px;
+    height: 19px;
+}
+
+.contact {
+    margin-bottom: 8px;
+}
+
+.contact-tag-a {
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 1.3rem;
+    margin-right: 5px;
+    margin-top: 6px;
+    font-weight: 600;
+    display: inline-block;
+    line-height: 16px;
+    &:hover {
+        text-decoration: underline;
+        cursor: pointer;
+    }
+}
+
+.addinfo-more {
+    width: 170px;
+    margin-left: -60px;
+    &::after {
+        content: '';
+        position: absolute;
+        border: 20px solid;
+        border-color: rgb(37, 37, 37) transparent transparent transparent;
+        bottom: -28px;
+        left: -60px;
+    }
+}
+.addinfo-title {
+    font-size: 1.5rem;
+    color: var(--primary-color);
+    font-weight: 200;
+    padding: 20px 16px;
+}
+
+.addinfo {
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 1.3rem;
+    font-weight: 600;
+}
+
+.yeartiktok {
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 1.3rem;
+    font-weight: 600;
 }
