--- a/src/components/Font/Font.module.scss
+++ b/src/components/Font/Font.module.scss
@@ -1,3 +1,19 @@
 .primary {
     color: var(--primary-color);
 }
+
+.text {
+    display: inline-flex;
+    min-width: 100px;
+    padding: 9px 16px;
+    font-size: 1.6rem;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+.icon {
+    margin-right: 8px;
+    display: inline-block;
+    width: 22px;
+    text-align: center;
+}
