--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -33,3 +33,14 @@ a[href] {
     color: var(--text-color);
     text-decoration: none;
 }
+
+body .tippy-box {
+    position: relative;
+    background-color: #333;
+    color: rgb(255, 255, 255);
+    border-radius: 4px;
+    font-size: 1.6rem;
+    font-weight: 600;
+}
+
+// Fonts embeded
