--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -25,81 +25,10 @@
     cursor: pointer;
     margin-top: auto;
 }
-.search-result,
-.search {
-    width: 515px;
-}
-.search {
-    border-radius: 92px;
-    background: rgba(255, 255, 255, 0.12);
-    height: var(--search-height);
-    padding-left: 16px;
-    display: flex;
-    position: relative;
-    input {
-        flex: 1;
-        height: 100%;
-        color: rgba(255, 255, 255, 0.9);
-        background: transparent;
-        font-size: 1.6rem;
-        caret-color: var(--primary-color);
-    }
-    ::placeholder {
-        color: rgba(255, 255, 255, 0.9);
-    }
-    &:hover {
-        border: solid 1px rgba(255, 255, 255, 0.3);
-    }
 
-    &::after {
-        content: '';
-        position: absolute;
-        top: var(--search-top-spacer);
-        right: 56px;
-        width: 1px;
-        height: calc(var(--search-height) - 18px);
-        background-color: rgba(255, 255, 255, 0.3);
-    }
-    &:focus-within {
-        border: solid 1px rgba(255, 255, 255, 0.3);
-    }
-    input:not(:placeholder-shown) ~ .search-btn {
-        color: rgba(255, 255, 255, 0.9);
-    }
-}
+//Search
 
-.search-title {
-    padding-left: 10px;
-    font-weight: 600;
-    font-size: 1.4rem;
-}
-
-.search-delete,
-.loading {
-    background-color: transparent;
-    color: rgba(118, 118, 118, 1);
-    font-size: 1.5rem;
-    position: absolute;
-    transform: translateY(-50%);
-    top: 50%;
-    right: 70px;
-}
-
-.search-btn {
-    color: rgba(118, 118, 118, 1);
-    background-color: transparent;
-    font-size: 2rem;
-    width: 56px;
-    height: 100%;
-    border-top-right-radius: 92px;
-    border-bottom-right-radius: 92px;
-    &:hover {
-        cursor: pointer;
-        color: rgba(255, 255, 255, 0.9);
-        background-color: rgba(255, 255, 255, 0.1);
-    }
-}
-
+//action
 .action {
     align-items: center;
     display: flex;
@@ -123,19 +52,19 @@
     width: 20px;
     height: 20px;
 }
-
+//Apper-Laptop
 .Apper {
     width: 200px;
     margin-right: 20px;
     position: relative;
-    &::after {
-        content: '';
-        position: absolute;
-        border: 20px solid;
-        border-color: transparent transparent rgb(37, 37, 37) transparent;
-        top: -28px;
-        right: 35px;
-    }
+    // &::after {
+    //     content: '';
+    //     position: absolute;
+    //     border: 20px solid;
+    //     border-color: transparent transparent rgb(37, 37, 37) transparent;
+    //     top: -28px;
+    //     right: 45px;
+    // }
 }
 
 .inner-Apper {
@@ -210,18 +139,18 @@
 }
 
 .icon-setting {
-    margin-right: 8px;
     width: 18px;
     height: 18px;
     flex: 0 0 20px;
 }
 
+// switch
 .switch {
     position: relative;
     display: inline-block;
     width: 44px;
     height: 24px;
-    left: 95px;
+    left: 110px;
     top: -3px;
 }
 
@@ -265,4 +194,40 @@
         border-radius: 50%;
         box-shadow: rgba(0, 0, 0, 0.15) 0px 1px 2px;
     }
+}
+
+.user-avatar {
+    width: 32px;
+    height: 32px;
+    object-fit: cover;
+    border-radius: 50%;
+    background-color: white;
+    margin-left: 10px;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.Mail-mess {
+    padding: 4px 12px;
+    align-items: center;
+    cursor: pointer;
+    display: flex;
+    position: relative;
+}
+.badge {
+    position: absolute;
+    top: -3px;
+    right: 0px;
+    padding: 0px 6px;
+    height: 2rem;
+    line-height: 2rem;
+    border-radius: 10px;
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: var(--white);
+    background-color: var(--primary-color);
+}
+.inner-Mail,
+.inner-Message {
+    padding: 0px 8px 5px;
 }
